compiler/testData/diagnostics/tests/inference/regressions/noRecursionOnCallingPureKotlinFunctionAsSyntheticJavaAccessor.kt
class B {
    fun getA() = <!UNRESOLVED_REFERENCE!>a<!>
}